# realestate-agents

./: Makefile  README.md  agent.py  llms.py  main.py  pyproject.toml  state.py
nodes/: analyze_email.py  analyze_listing_page.py  fetch_details.py  finish.py
notebooks/: pyproject.toml  researcher.ipynb
